--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-typescript-starter</title>
+
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
+    <title>Agrosurance | Insure your Farmland</title>
   </head>
   <body>
     <div id="root"></div>
